# Revision-Aware-DFM

./: .env.example  .gitignore  README.md  data  pyproject.toml  requirements.txt
configs/: project.yaml  series_catalog.csv  stage0_manifest.json  stage2_manifest.json  target_catalog.csv
docs/: FULL_STATE_SPACE_PROJECT_DRAFT.md  FULL_STATE_WORK_REPORT.md  GDP_RELEASE_CALENDAR_NOTE.md  JOURNAL_CANDIDATE_RUNBOOK.md  OPERATIONS_PLAN.md  PAPER_STYLE_REPORT_VI.html  PAPER_STYLE_REPORT_VI.md  Q1_MANUSCRIPT_RUNBOOK.md  Q2_MANUSCRIPT_ROADMAP.md  STAGE0_CENSUS_NOTE.md  STAGE_2_CHECKLIST.md  SUBMISSION_MODE.md  core_papers_map.md  data_registry.md  research_log.md
full_state_space_release_revision_dfm/: JOURNAL_UPGRADE_CHECKLIST.md  README.md  __init__.py  build_convergence_stability_table.py  build_journal_evidence_package.py  build_report_package.py  build_variance_audit.py  data_adapter.py  density.py  exact_pseudo_backtest.py  example_bronze_smoke.py  example_synthetic.py  joint_indicator_revision_dfm.py  kalman_em.py  mixed_frequency_release_kalman.py  prototype_quarterly_backtest.py  q2_benchmarks.py  release_revision_dfm.py  run_initialization_audit.py  run_smoke_tests.py
paper/: README.md  appendix.md  cover_letter.md  manuscript.md  manuscript.tex  reproducibility_note.md
scripts/: 05_build_target_definition_tables.py  06_build_indicator_metadata.py  07_build_release_taxonomy_and_mappings.py  08_build_calendar_coverage_metadata.py  09_build_silver_curated_layer.py  10_build_gdp_release_calendar_from_alfred.py  11_build_mature_target_robustness_panels.py  (+5 more)
(+1453 files in other folders)
